fix overlapping text in header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,18 @@ h6 {
     text-transform: uppercase;
 }
 
+@media (max-width: 400px) {
+    #header .trade-mark {
+        font-size: 25px;
+    }
+}
+
+@media (max-width: 356px) {
+    #header .trade-mark {
+        font-size: 20px;
+    }
+}
+
 #header .logo a {
     color: #fff;
 }
